--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Get Version
       shell: bash
       id: get-version
-      run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
+      run: echo "::set-output name=version::$(node .github/workflows/get-version.js)"
 
     # Create a release for this specific version
     - name: Create Release
