--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
 
     # create a zip file with all files required by the module to add to the release
-    - run: zip -r ./wfrp4e-roll-tracker.zip module.json lang/ scripts/ styles/ templates/
+    - run: zip -r ./module.zip module.json lang/ scripts/ styles/ templates/
 
     # Update the 'latest' release
     - name: Create Release
@@ -22,5 +22,5 @@ jobs:
         draft: false
         prerelease: false
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: './module.json,./wfrp4e-roll-tracker.zip'
+        artifacts: './module.json,./module.zip'
         tag: latest
